2006-05-10  Sushma Rai  <rsushma@novell.com>

	mail/mail-stub-exchange.c (subscribe_folder): Not adding the toplevel
	"All Public Folders" to the list of favorite folders. Fixes #339277.

2006-05-10  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (unsubscribe_folder): Extracting the folder
	name instead of folder patch. Fixes the issue of unsubscribing the sub
	favorite folders. Related to bug #268412.

2006-05-04  Jeffrey Stedfast  <fejj@novell.com>

	Fix for the hang in Novell bug #166987

	* camel/camel-stub.c (status_main): Create a CamelOperation
	context so our main-loop/reads/writes can all be cancelled.
	(finalize): Call camel_operation_cancel() on the stub's
	CamelOperation so that the status_main thread exits more-or-less
	immediately rather than hanging indefinitely in a system read()
	call.

	* camel/camel-stub-marshal.c (do_read): Use camel_read() so the
	read is cancellable.
	(camel_stub_marshal_flush): Use camel_write().

2006-05-02  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: More LDAP build fixing from Sushuma Rai
	Closes bug #325957

2006-04-26  Sushma Rai  <rsushma@novell.com>

	* configure.in : Corrected the EVOLUTION_API_VERSION and 
	EDS_BASE_VERSION and bumped the version to 2.7.1.1

2006-04-25  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.7.1
	* NEWS : Updated

2006-04-24  Chenthill Palanisamy  <pchenthill@novell.com>

	* calendar/e-cal-backend-exchange.c: (build_msg): Not freeing the
	destination file for attachements. Fixes #330494.

2006-04-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #334727
	* calendar/e-cal-backend-exchange-calendar.c: 
	(add_vevent): Return correct status.
	(add_ical), (receive_objects): Pass the duped string.
				       
2006-04-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #330674
	* calendar/e-cal-backend-exchange-calendar.c:
	(receive_objects): Passed ECalComponentId for notifying
	clients on objects removed.
